refactor: optimización